# tradingbot

./: .env.example  .env.template  .gitignore  ADDITIONAL_ISSUES.md  API.md  ARCHITECTURE.md  AUTO_TRADE_GUIDE.md  App.tsx  BUGS_FOUND_AND_FIXED.md  BUG_FIX_REPORT.md  CHANGELOG.md  CLOUD_DEPLOY.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  CRITICAL_FIXES.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_DIGITALOCEAN.md  DIAGNOSTIC.bat  Dockerfile.bot  Dockerfile.dashboard  FINAL_CHECK.bat  GET_SUPABASE_KEYS.md  GITHUB_SETUP.md  HIGH_PRIORITY_FIXES.md  IMPROVEMENTS_LOG.md  MASTER_PLAN.md  NOT_SIMULATING.md  OPENAI_INTEGRATION.md  OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  PROJECT_10_OF_10.md  PROJECT_COMPLETE.md  PROOF_AUTO_TRADE_WORKS.md  Procfile  QA_REPORT.md  QUICKSTART_AUTO_TRADE.md  QUICK_START.md  README.md  (+102 more)
.github/workflows/: ci.yml
components/: AiAnalyst.tsx  BotConfigPanel.tsx  ChartSection.tsx  SignalFeed.tsx
configs/: strategy_config.yaml
dashboard/: app.py  app_old.py  app_v11.py  data_provider.py
models/: lstm_model.pth
modules/: __init__.py  adaptive_learning.py  autonomous_trader.py  backtester.py  external_signals.py  health_monitor.py  intelligent_ai.py  market_regime.py  performance_analyzer.py  performance_metrics.py  portfolio_manager.py  retry_utils.py  risk_manager.py  sentiment_analyzer.py  watchdog.py
services/: binanceService.ts  geminiService.ts  telegramService.ts
tensorboard_logs/PPO_1/: events.out.tfevents.1765891790.Yusif.29176.0
utils/: indicators.ts  storage.ts
